# SPHFluidSimulator

./: .gitignore  CMakeLists.txt  DECLARATION.txt  README.md  milestone.txt
lib/glew-2.1.0/lib/: libGLEW.dylib
lib/glew-2.1.0/lib/pkgconfig/: glew.pc
lib/glfw-3.3.8/debug/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.3.8/debug/CMakeScripts/: ReRunCMake.make
lib/glfw-3.3.8/debug/GLFW.xcodeproj/: project.pbxproj
lib/glfw-3.3.8/debug/src/: Makefile  cmake_install.cmake
lib/glfw-3.3.8/debug/src/COMP559A3Fluid.build/Debug/glfw.build/Objects-normal/arm64/: cocoa_init.d  cocoa_joystick.d  cocoa_monitor.d  cocoa_time.d  cocoa_window.d  context.d  egl_context.d  glfw3.LinkFileList  init.d  input.d  monitor.d  nsgl_context.d  osmesa_context.d  posix_thread.d  vulkan.d  window.d
rsc/shaders/: water.frag  water.vert
src/: boundary.hpp  dump.txt  fluid.cpp  fluid.h  fluidSimulator.cpp  fluidSimulator.h  kernel.cpp  kernel.h  light.h  main.cpp  old.tmp  particle.cpp  particle.h  particle.hpp  scene.hpp  sceneManager.cpp  sceneManager.hpp  simulator.hpp  simulatorManager.cpp  simulatorManager.hpp
src/boundaries/: boundary.hpp  linearBoundary.cpp  linearBoundary.hpp  multiBoundary.hpp  positionalBoundary.cpp  positionalBoundary.hpp  verticalBoundary.cpp  verticalBoundary.hpp
src/datastructures/: parameter.hpp  particle.cpp  particle.hpp
src/discretizations/: bruteDiscretization.cpp  bruteDiscretization.hpp  compactHashingDiscretization.cpp  compactHashingDiscretization.hpp  discretization.hpp  gridDiscretization.cpp  gridDiscretization.hpp
src/fails/: freetype_attempt.txt
src/kernels/: cubicSplineKernel.cpp  cubicSplineKernel.hpp  kernel.hpp  nonNormalizedCubicSplineKernel.cpp  nonNormalizedCubicSplineKernel.hpp  solenthalerKernel.cpp  solenthalerKernel.hpp
src/managers/: sceneManager.cpp  sceneManager.hpp  simulatorManager.cpp  simulatorManager.hpp
src/scenes/: bleakfalls.cpp  bleakfalls.hpp  damBreak.cpp  damBreak.hpp  damBreakScene.cpp  damBreakScene.hpp  dummyScene.hpp  fountainScene.cpp  fountainScene.hpp  rainScene.cpp  rainScene.hpp  scene.hpp  waterCometScene.cpp  waterCometScene.hpp  waterfallScene.cpp  waterfallScene.hpp
src/simulators/: ihmsenSimulator.cpp  ihmsenSimulator.hpp  mullerSimulator.cpp  mullerSimulator.hpp  simulator.hpp  stateSplitSimulator.cpp  stateSplitSimulator.hpp
src/utils/: constVector.hpp
tests/: kernel_tests.cpp
